--- a/CS310/divtags/static/divtags/css/style.css
+++ b/CS310/divtags/static/divtags/css/style.css
@@ -1,3 +1,52 @@
+#attribute-details-div button {
+	background-color: #ffffff;
+	border-radius: 3px;
+	border: 1px solid grey;
+	margin: 5px;
+}
+
+#calc-operators, #calc-constants, #calc-attribute-reference {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	display: inline;
+}
+
+#attribute-details-errors, #attribute-name-errors, #object-name-errors {
+	color: #ff0000;
+	margin-left:20px;
+}
+
+#cancel-edit-object-button {
+	margin-left: 20px;
+}
+
+.tooltip {
+	left: 30px;
+    position: relative;
+    display: inline-block;
+    opacity: 1 !important;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+    visibility: hidden;
+    width: 250px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px;
+    border-radius: 6px;
+ 
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
 .home-buttons .form-control {
 	margin-bottom: 15px;
 }
