--- a/CS310/divtags/templates/divtags/project-history.html
+++ b/CS310/divtags/templates/divtags/project-history.html
@@ -3,7 +3,7 @@
 <h1>Application History</h1>
 
 <h3>Current Version</h3>
-<table class="table table-hover text-left">
+<table class="table table-hover text-left" id="current-version-table">
 	<thead>
 		<tr>
 			<th>Version Number</th>
