--- a/CS310/divtags/static/divtags/css/sandbox.css
+++ b/CS310/divtags/static/divtags/css/sandbox.css
@@ -47,12 +47,27 @@
 .mover { 
 	width: 15px; 
 	height: 15px; 
+	line-height:15px;
+	background-color: #ffffff;
+	/* border: 1px solid black;  */
+	position: absolute; 
+	top: 30px; 
+	left: -30px; 
+	cursor: move; 
+	color: #000000;
+	font-size: 15px;
+}
+
+.delete {
+	width: 15px; 
+	height: 15px; 
+	line-height:15px;
 	background-color: #ffffff;
 	/* border: 1px solid black;  */
 	position: absolute; 
 	top: 5px; 
 	left: -30px; 
-	cursor: move; 
+	cursor: pointer;
 	color: #000000;
 	font-size: 15px;
 }
@@ -68,6 +83,7 @@
 	right: 20px;
 	width: 150px;
 	background-color: #d9d9d9;
+	display:none;
 }
 
 .element-padding {
