--- a/CS310/divtags/static/divtags/css/style.css
+++ b/CS310/divtags/static/divtags/css/style.css
@@ -20,6 +20,111 @@
 	margin-left: 20px;
 }
 
+#homepage-toggle {
+	margin-bottom: 20px;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {display:none;}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #ff8040;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #ff8040;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+.page-menu-button {
+	text-align:center;
+	position: absolute;
+	right: 20px;
+	top: 20px;
+	width:50px;
+	height:50px;
+	border-radius: 5px;
+	background-color: rgba(0,0,0,0.3);
+	color: #ffffff;
+}
+
+.page-menu-button:hover {
+	background-color: rgba(0,0,0,0.6);
+}
+
+.page-menu-button i {
+	line-height:50px;
+}
+
+#element-menu-button {
+	right: 85px;
+	display:none;
+}
+
+.side-menu {
+	position: absolute;
+	right: 20px;
+	top: 70px;
+	width:250px;
+	border-radius: 5px;
+	background-color: rgba(0,0,0,0.6);
+	color: #ffffff;
+	padding:10px;
+}
+
+.side-menu h4, .side-menu h6 {
+	color: #ffffff;
+}
+
+#new-page-name {
+	width:150px;
+	display: inline-block;
+}
+
 .tooltip {
 	left: 30px;
     position: relative;
