--- a/CS310/divtags/templates/divtags/project-content.html
+++ b/CS310/divtags/templates/divtags/project-content.html
@@ -1,28 +1,66 @@
 {% load static %}
 
-<!-- <iframe src="#" style="width:100%; height:100%;"></iframe> -->
 <div id="json-result" style="display:none;"></div>
-<div class="container" id="outer-container" style="height:100%">
-
+<div class="container" id="outer-container" style="height:100%"></div>
+<div id="page-menu-button" class="page-menu-button">
+	<i class="icon-reorder"></i>
 </div>
-
+<div id="element-menu-button" class="page-menu-button">
+	<i class="icon-caret-down"></i>
+</div>
+<div id="page-menu-options" class="side-menu" style="display:none">
+	<h4 id="page-options-name"></h4>
+	<h6>Set as Homepage</h6>
+	<button id="homepage-toggle" class="btn btn-default">Set as Homepage</button>
+	<h6>Show elements on all pages</h6>
+	<label class="checkbox-inline">
+		<input id="show-allpages-elements-toggle" type="checkbox" data-toggle="toggle" data-offstyle="danger" data-onstyle="success" data-on="Yes" data-off="No" data-width="50px">
+	</label>
+	<h6>Page Permissions</h6>
+	<label class="checkbox-inline">
+		<input id="permissions-toggle" type="checkbox" data-toggle="toggle" data-offstyle="success" data-onstyle="warning" data-on="Members Only" data-off="Public" data-width="150px">
+	</label>
+	<h6>Show in Page Header</h6>
+	<label class="checkbox-inline">
+		<input id="page-header-toggle" type="checkbox" data-toggle="toggle" data-offstyle="danger" data-onstyle="success" data-on="Yes" data-off="No" data-width="50px">
+	</label>
+	
+	<h6>Background Colour</h6>
+	<input class="form-control" id="page-background-colour" type="color" value="#ff0000" style="width:150px"/>
+</div>
 <input id="page-identifier" value="0" type="hidden">
-<div class="element-editor" id="element-editor" style="display:none;">
-	<h4>Position</h4>
-	<p>Top: <span id="element-position-top"></span> px</p>
-	<p>Left: <span id="element-position-left"></span> px</p>
+<div class="side-menu" id="element-editor" style="display:none;">
+	<h4 style="margin-bottom:10px;">Position</h4>
+	<div class="row" style="margin-bottom:20px;">
+		<div class="col-sm-6">Top: <span id="element-position-top"></span> px</div>
+		<div class="col-sm-6">Left: <span id="element-position-left"></span> px</div>
+	</div>
 	
-	<h4>Size</h4>
-	<p>Width: <span id="element-size-width"></span> px</p>
-	<p>Height: <span id="element-size-height"></span> px</p>
+	<h4 style="margin-bottom:10px;">Size</h4>
+	<div class="row" style="margin-bottom:20px;">
+		<div class="col-sm-6">Width: <span id="element-size-width"></span> px</div>
+		<div class="col-sm-6">Height: <span id="element-size-height"></span> px</div>
+	</div>
 	
-	<h4>Padding</h4>
-	<p>Top: <input class="element-padding" id="element-padding-top" placeholder="Top" value="0"/> px</p>
-	<p>Right: <input class="element-padding" id="element-padding-right" placeholder="Right" value="0"/> px</p>
-	<p>Bottom: <input class="element-padding" id="element-padding-bottom" placeholder="Bottom" value="0"/> px</p>
-	<p>Left: <input class="element-padding" id="element-padding-left" placeholder="Left" value="0"/> px</p>
+	<h4 style="margin-bottom:10px;">Padding</h4>
+	<div class="row" style="margin-bottom:10px;">
+		<div class="col-sm-6">Top: <br><input class="element-padding form-control" id="element-padding-top" placeholder="Top" value="0" style="width:75px; display:inline-block;"/> px</div>
+		<div class="col-sm-6">Bottom: <br><input class="element-padding form-control" id="element-padding-bottom" placeholder="Bottom" value="0" style="width:75px; display:inline-block;"/> px</div>
+	</div>
+	<div class="row" style="margin-bottom:20px;">
+		<div class="col-sm-6">Left: <br><input class="element-padding form-control" id="element-padding-left" placeholder="Left" value="0" style="width:75px; display:inline-block;"/> px</div>
+		<div class="col-sm-6">Right: <br><input class="element-padding form-control" id="element-padding-right" placeholder="Right" value="0" style="width:75px; display:inline-block;"/> px</div>
+	</div>
 	
-	<h4>Colour</h4>
-	<p>Text: <input id="element-colour-text" type="color" value="#ff0000"/></p>
- 	<p>Background: <input id="element-colour-background" type="color" value="#ff0000"/></p>
+	<h4 style="margin-bottom:10px;">Colour</h4>
+	<div class="row" style="margin-bottom:20px;">
+		<div class="col-sm-6">Text: <br><input class="form-control" id="element-colour-text" type="color" value="#ff0000" style="width:75px"/></div>
+		<div class="col-sm-6">B/ground: <br><input class="form-control" id="element-colour-background" type="color" value="#ff0000" style="width:75px"/></div>
+	</div>
+ 	
+ 	<h4 style="margin-bottom:10px;">Show on all Pages</h4>
+	<label class="switch">
+		<input type="checkbox" id="show-all-pages" value="show">
+		<span class="slider round"></span>
+	</label>
 </div>
